<resources>
    <string name="app_name">Watched</string>
    <string name="smI_poster_preview_cd">Poster preview image</string>
    <string name="nav_header_description">Navigation drawer header</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="about">About the app</string>
    <string name="load_more_movies">Load more movies</string>
    <string name="movie_details">Movie details</string>
    <string name="movie_detail_poster">Movie detail poster</string>
    <string name="lipsum_text_holder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non tortor sit amet odio iaculis sagittis. Nunc dignissim tincidunt suscipit. Donec venenatis fringilla libero in sagittis. Curabitur dictum ipsum et quam porta, vel posuere lacus consequat. Nunc in sapien finibus, interdum lectus quis, tempor lectus. Aenean eleifend id eros at vestibulum. Nam magna libero, convallis quis pretium lobortis, cursus eu metus. Quisque sit amet maximus tellus. Duis egestas mi nulla, sed aliquet nunc faucibus sed. Cras elit mi, rhoncus ac imperdiet ullamcorper, interdum in purus. Integer id tortor id quam volutpat posuere.</string>
    <string name="release_date_w_colon">Release date: %1$s</string>
    <string name="runtime_w_colon">Duration: %1$s minutes</string>
    <string name="genre_w_colon">Genre:</string>
    <string name="produced_by">Produced by:</string>
    <string name="like_button_cD">Like button</string>
    <string name="set_as_watched_button_cd">Set as watched button</string>
    <string name="watched">Watched</string>
    <string name="watch">Watch</string>
    <string name="like">Like</string>
    <string name="no_title">No title found</string>
    <string name="about_app_more_info">Watched APP</string>
    <string name="filter_movies_switch_text">Filter movies with 18+ target</string>
    <string name="allow_notifications_switch_text">Allow notifications</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_load_more">No internet connection to load more movies</string>
    <string name="notification_title">Check this new movie recommendation</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_button_cd">Favorite button</string>
    <string name="turn_on">Turn on</string>
    <string name="connection_unavailable">Connection unavailable_cd</string>
    <string name="no_favorite_movies_stored_icon_cd">No favorite movies stored icon</string>
    <string name="no_favorite_movies_stored">No favorite movies stored</string>
</resources>