<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_topMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movies"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_tv_series"
            android:icon="@drawable/ic_live_tv"
            android:title="@string/tv_series" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
    </group>
    <group
        android:id="@+id/menu_bottomMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>