<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_movies">

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.test.watched.ui.movieslist.MoviesListFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies_list">
        <action
            android:id="@+id/action_nav_movies_to_movieDetailsFragment"
            app:destination="@id/nav_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="com.test.watched.ui.moviedetails.MovieDetailsFragment"
        android:label="@string/movie_details"
        tools:layout="@layout/fragment_movie_details">
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.test.watched.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.test.watched.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.test.watched.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

</navigation>